@@ -1,5 +1,6 @@
 Version 1.7.14+svn:
  * AI:
+   * Set RCA AI to be the default AI for single-player campaigns.
    * Fix bug #15390: add a try_delete action to modify_ai which has
      'delete if exists, don't complain if not exists' semantics
    * Fix bug #15013: make AI gotos persist between turns when set by
